--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -35,14 +37,22 @@ body {
     rgb(var(--background-start-rgb));
     box-sizing: border-box;
 }
-
+@layer base {
+  body{
+    @apply scroll-smooth;
+  }
+}
 @layer components {
   .headerLink {
-    @apply cursor-pointer opacity-75 transition hover:opacity-100 text-zinc-200 font-extralight px-4
+    @apply cursor-pointer opacity-75 transition hover:opacity-100 text-zinc-100 font-extralight px-4
     text-sm;
   }
 }
 .glassMorphism {
-  @apply sticky w-full bg-zinc-200
+  @apply sticky w-full bg-black
    shadow-md bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-80 border border-gray-900
+}
+
+.headerIcon{
+  @apply h-5 w-5 text-white opacity-75 hover:opacity-100 cursor-pointer 
 }
