added cusomised extension and global styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,3 +56,18 @@ body {
 .headerIcon{
   @apply h-5 w-5 text-white opacity-75 hover:opacity-100 cursor-pointer 
 }
+
+.borderGradient {
+  text-align: center;
+  padding-bottom: 5px;
+  background: linear-gradient(to right, #ec4899, #8b5cf6) left bottom
+  no-repeat;
+  background-size: 100% 2px;
+ }
+
+ .cartButton {
+  @apply flex h-14 w-14 flex-shrink-0 cursor-pointer items-center
+  justify-center rounded-full bg-gradient-to-r from-pink-500 to-violet-500 
+  md:h-[70px] md:w-[70px] sm:h-[50px] sm:w-[50px] hover:bg-gradient-to-r hover:from-gray-800 hover:to-gray-900 
+  hover:opacity-75 transition-all
+}
