--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -23,7 +23,9 @@
   padding: 0;
 }
 
-*, ::before, ::after {
+*,
+::before,
+::after {
   box-sizing: border-box;
 }
 
@@ -35,10 +37,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 @layer base {
-  body{
+  body {
     @apply scroll-smooth;
   }
 }
@@ -50,24 +52,33 @@ body {
 }
 .glassMorphism {
   @apply sticky w-full bg-black
-   shadow-md bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-80 border border-gray-900
+   shadow-md bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-80 border border-gray-900;
 }
 
-.headerIcon{
-  @apply h-5 w-5 text-white opacity-75 hover:opacity-100 cursor-pointer 
+.headerIcon {
+  @apply h-5 w-5 text-white opacity-75 hover:opacity-100 cursor-pointer;
 }
 
 .borderGradient {
   text-align: center;
   padding-bottom: 5px;
-  background: linear-gradient(to right, #ec4899, #8b5cf6) left bottom
-  no-repeat;
+  background: linear-gradient(to right, #ec4899, #8b5cf6) left bottom no-repeat;
   background-size: 100% 2px;
- }
+}
+.overviewLayout {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  content: "";
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.2);
+}
 
- .cartButton {
+.cartButton {
   @apply flex h-14 w-14 flex-shrink-0 cursor-pointer items-center
   justify-center rounded-full bg-gradient-to-r from-pink-500 to-violet-500 
   md:h-[70px] md:w-[70px] sm:h-[50px] sm:w-[50px] hover:bg-gradient-to-r hover:from-gray-800 hover:to-gray-900 
-  hover:opacity-75 transition-all
+  hover:opacity-75 transition-all;
 }
